text alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -18,22 +18,13 @@ body {
     background-size: cover;
 }
 
-h1, h2 {
-    color: hsl(50, 97%, 45%);
-    text-align: center;
-    padding-bottom: 1em;
-    padding-top: 1em;
-    margin: 0 auto;
-}
-
-
-
-
 #intro {
     display: flex;
     flex-wrap: wrap;
     min-width: 300px;
     color: hsl(50, 97%, 44%);
+    justify-content: center;
+    align-content: center;
     text-align: center;
     padding-bottom: 1em;
     line-height: 1.5;
